# repo-backup-manager

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  commands.rs  git.rs  github.rs  lib.rs  main.rs  state.rs
src/components/: Header.tsx  LoadingSpinner.tsx  Sidebar.tsx  Toast.tsx
src/contexts/: AppContext.tsx
src/pages/: Activity.tsx  Backups.tsx  Dashboard.tsx  Repositories.tsx  Settings.tsx
src/types/: index.ts
